@@ -121,6 +121,7 @@ OPERATORS = {
     'leq': lambda f, a: f <= a,
     'ilike': lambda f, a: f.ilike(a),
     'like': lambda f, a: f.like(a),
+    'not_like': lambda f, a: ~f.like(a),
     'in': lambda f, a: f.in_(a),
     'not_in': lambda f, a: ~f.in_(a),
     # Operators which accept three arguments.
